# chessbot

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  code-coverage.yml  deploy-docs.yml  quick-check.yml
config/: chessbot.eng
docs/: README.md  api_reference.md  index.md
docs/api/: chessbot.md
docs/getting-started/: examples.md  installation.md  quickstart.md  uci-integration.md
scripts/: run_uci_engine.py  start_xboard.sh  test_uci.py
src/chessbot/: __init__.py  board.py  engine.py  main.py  uci_engine.py  uci_engine_advanced.py
src/chessbot/engine/: __init__.py  engine.py  factory.py  minimax.py
src/chessbot/utils/: __init__.py  logger.py  move_utils.py  notation_utils.py
tests/: __init__.py  test_board.py  test_engine.py  test_logger.py
tests/engine/: __init__.py  test_engine.py  test_factory.py  test_init.py  test_minimax.py
